@@ -1,3 +1,7 @@
+2025-08-21  Robby Stephenson  <robby@periapsis.org>
+
+	* Added configurable image size to OpenLibrary data source.
+
 2025-08-19  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated OpenLibrary source to find covers for books without ISBN (Bug 507912).
